# omniconnect

./: .gitignore  README.md
backend/: .env.example  alembic.ini  main.py  pyproject.toml
backend/migration/: env.py
backend/migration/versions/: 0f03a343d45b_initial.py  96b03828b689_add_refresh_token.py
backend/migrations/: env.py
backend/migrations/versions/: 0da32579d479_add_clomun_blacklist_to_refresh_token.py  1ad9f240bf9a_init_db.py  1b5744bd0dd3_таблица_постов.py  30f5d4bc7c10_.py  34e32a691568_изменил_схему_чатов.py  3d1ba656bbd2_изменил_схему_чатов_2.py  477bc230631a_init_db.py  bf143cb75081_очередная_новая_база.py  c0b8aef54dd2_first_models.py  f3fd8661c160_add_clomun_permision.py  fd339b11fd12_добавил_для_сообщний_юзернейм.py
backend/src/api/: __init__.py  dependecies.py  exception_handlers.py  routers.py
backend/src/api/dependencies/: auth.py  connect.py  service.py
backend/src/core/: config.py  connection.py  exceptions.py  security.py
backend/src/enum/: chats.py
backend/src/models/: __init__.py  attachments.py  base.py  bots.py  chats.py  message.py  models.py  post.py  token.py  users.py
backend/src/repositories/: __init__.py  attachments.py  base.py  bots.py  chats.py  message.py  post.py  refresh_token.py  token.py  users.py
backend/src/schemas/: __init__.py  auth.py  base.py  bots.py  chats.py  message.py  tokens.py  users.py
backend/src/services/: __init__.py  auth.py  bots.py  chats.py  connect_manager.py  message.py  post.py  redis_manager.py  security.py  uow.py  users.py  websocket.py
backend/src/utils/: __init__.py  file.py
(+58 files in other folders)
