[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]
