[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.3",
    "loguru>=0.7.3",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "scalar-fastapi>=1.8.2",
    "websockets>=16.0",
]
